--- a/pagamento/pagamento_realizado.html
+++ b/pagamento/pagamento_realizado.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="7;/pagamento/inserir_placa.html" />
+    <meta http-equiv="refresh" content="7;/panel.html" />
     <link rel="stylesheet" href="pagamento_realizado.css">
     <title>Pagamento</title>
 </head>
