--- a/pagamento/metodos/cartão_crédito.html
+++ b/pagamento/metodos/cartão_crédito.html
@@ -20,7 +20,7 @@
 
         async function updatePaymentValueRegisterEntrance(license, payment_value) {
             var res;
-            await axios.patch('http://localhost:3000/register', null, { params: {updateExit: false, license: license, payment_value: payment_value} })
+            await axios.patch('http://localhost:3000/register', null, { params: {updateExit: 0, license: license, payment_value: payment_value} })
                 .then(response => { res = response.data;} )
                 .catch(error => console.log(error));
             return res;
