--- a/pagamento/metodos/pix.html
+++ b/pagamento/metodos/pix.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        function redirect() {
+        function redirectBack() {
             var sPageURL = window.location.search.substring(1),
                 sURLVariables = sPageURL.split('='),
                 sParameterName,
@@ -15,6 +15,16 @@
                 //alert(sURLVariables[1]);  
             var entrance_id = sURLVariables[1];
             window.location.href='/pagamento/metodo_pagamento.html?id='+entrance_id;
+        }
+
+        function redirect() {
+            var sPageURL = window.location.search.substring(1),
+                sURLVariables = sPageURL.split('='),
+                sParameterName,
+                i;
+            var entrance_id = sURLVariables[1];
+            var value = sURLVariables[2];
+            window.location.href = './qrcode.html' + '?id=' + entrance_id + '=' + value;
         }
     </script>
     
@@ -28,8 +38,8 @@
     </header>
 
     <div class="teste">
-        <div class="qr_code" id="qrcode" onclick="window.location.href='./qrcode.html'"></div>
-        <div class="cancelar" onclick="redirect()">Cancelar</div> 
+        <div class="qr_code" id="qrcode" onclick="redirect()"></div>
+        <div class="cancelar" onclick="redirectBack()">Cancelar</div> 
     </div>
 
     <!--                                                                             espacamento                                                                  -->
