--- a/pagamento/metodos/qrcode.html
+++ b/pagamento/metodos/qrcode.html
@@ -96,7 +96,7 @@
                 <p style="color:rgb(0, 0, 0);font-size: 18px; font-weight: lighter;">Agência &emsp;&emsp;&emsp;&ensp;&nbsp;&nbsp;1</p>
                 <p style="color:rgb(0, 0, 0);font-size: 18px; font-weight: lighter;">Conta corrente &nbsp;12345678-9</p>
             </div>
-            <button class="button btn_transfer" id="btn_transfer" onclick="window.location.href='../pagamento_realizado.html'">Transferir</button>
+            <button class="button btn_transfer" id="btn_transfer" onclick="redirect()">Transferir</button>
         </div>
     </body>
 </html>
